apps/reel-room/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reel-room
  namespace: default
  labels:
    app: reel-room
spec:
  selector:
    app: reel-room
  ports:
    - name: http
      port: 80
      targetPort: http
